--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "limits.h": "c"
+        "limits.h": "c",
+        "push_swap.h": "c"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
